--- a/config.js.sample
+++ b/config.js.sample
@@ -13,9 +13,9 @@ module.exports = {
         pass: undefined
     }
  },
- blobAccessToken:{ // Blob access information: {sasToken:<token>,blobAccountUrl: 'https://<blob_name>.blob.core.windows.net/'}
-    sasToken: undefined,
-    blobAccountUrl: undefined,
+ openDxAccessToken:{ // Blob access information: {sasToken:<token>,blobAccountUrl: 'https://<blob_name>.blob.core.windows.net/'}
+    key: undefined,
+    blobAccount: undefined,
   },
   OPENAI_API_KEY: undefined, // OPENAI_API_KEY sevice key
 }
