--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "LOA",
   "license": "MIT",
   "dependencies": {
+    "@azure/ai-text-analytics": "^5.1.0",
     "@azure/storage-blob": "^12.2.0-preview.1",
     "async": "^2.6.0",
     "azure-sb": "^0.10.6",
