--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^4.13.1",
     "nodemailer": "^4.4.0",
     "nodemailer-express-handlebars": "^2.0.0",
+    "openai": "^3.2.1",
     "openai-api": "^1.3.1",
     "request": "^2.87.0",
     "wikijs": "^6.3.2"
