--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "@azure/ai-text-analytics": "^5.1.0",
+    "@azure/openai": "^1.0.0-beta.4",
     "@azure/storage-blob": "^12.2.0-preview.1",
     "async": "^2.6.0",
     "azure-sb": "^0.10.6",
