--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "@azure/ai-text-analytics": "^5.1.0",
     "@azure/openai": "^1.0.0-beta.4",
-    "@azure/storage-blob": "^12.2.0-preview.1",
-    "async": "^2.6.0",
+    "@azure/storage-blob": "^12.16.0",
+    "applicationinsights": "^2.7.3",
+    "async": "^2.6.4",
     "azure-sb": "^0.10.6",
     "azure-storage": "^2.10.3",
     "bcrypt-nodejs": "0.0.3",
@@ -24,8 +25,8 @@
     "fs-extra": "^5.0.0",
     "jasmine": "^3.5.0",
     "js-sha512": "^0.7.1",
-    "jwt-simple": "^0.5.1",
-    "moment": "^2.19.1",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.29.4",
     "mongoose": "^4.13.1",
     "nodemailer": "^4.4.0",
     "nodemailer-express-handlebars": "^2.0.0",
