--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "fs-extra": "^5.0.0",
