--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fs-extra": "^5.0.0",
     "jasmine": "^3.5.0",
     "js-sha512": "^0.7.1",
+    "js-tiktoken": "^1.0.12",
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.4",
     "mongoose": "^4.13.1",
