--- a/web.config
+++ b/web.config
@@ -3,22 +3,16 @@
   <system.webServer>
     <webSocket enabled="false" />
     <handlers>
-      <!-- Indicates that the server.js file is a node.js site to be handled by the iisnode module -->
       <add name="iisnode" path="index.js" verb="*" modules="iisnode"/>
     </handlers>
     <rewrite>
       <rules>
-        <!-- Do not interfere with requests for node-inspector debugging -->
         <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
           <match url="^index.js\/debug[\/]?" />
         </rule>
-
-        <!-- First we consider whether the incoming URL matches a physical file in the /public folder -->
         <rule name="StaticContent">
           <action type="Rewrite" url="public{PATH_INFO}"/>
         </rule>
-
-        <!-- All other URLs are mapped to the node.js site entry point -->
         <rule name="DynamicContent">
           <conditions>
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
@@ -44,7 +38,11 @@
         </hiddenSegments>
       </requestFiltering>
     </security>
-
+    <httpProtocol>
+      <customHeaders>
+        <add name="Strict-Transport-Security" value="max-age=31536000"/>
+      </customHeaders>
+    </httpProtocol>
     <!-- Make sure error responses are left untouched -->
     <httpErrors existingResponse="PassThrough" />
 
