--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@azure/storage-blob": "^12.16.0",
     "applicationinsights": "^2.7.3",
     "async": "^2.6.4",
+    "axios": "^1.7.7",
     "azure-sb": "^0.10.6",
     "azure-storage": "^2.10.3",
     "bcrypt-nodejs": "0.0.3",
@@ -24,6 +25,7 @@
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "fs-extra": "^5.0.0",
+    "helmet": "^8.0.0",
     "jasmine": "^3.5.0",
     "js-sha512": "^0.7.1",
     "js-tiktoken": "^1.0.12",
