--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 node_modules
 dist
 config.js
+*.log
+logs/
+.env
+
+# Docker
+.dockerignore
+env.local
+env.dev
+env.prod
+env*
+docker*
+azure-deploy*
