--- a/env.example
+++ b/env.example
@@ -21,11 +21,10 @@ SERVICE_BUS_NAME=your_service_bus_namespace
 SERVICE_BUS_KEY=your_service_bus_key
 QUEUE_UTILIZATION_THRESHOLD=80
 
-# CORS
-ALLOWEDORIGINS="['http://localhost:4200']"
-
 # API y Seguridad
 API_MANAGEMENT_KEY=your_api_management_key
+API_MANAGEMENT_BASE=your_api_management_url
+
 INSIGHTS_KEY=your_insights_key
 SERVER_KEY=your_server_key
 
