--- a/env.example
+++ b/env.example
@@ -28,6 +28,8 @@ API_MANAGEMENT_BASE=your_api_management_url
 INSIGHTS_KEY=your_insights_key
 SERVER_KEY=your_server_key
 
+SECRET_KEY_CRYPTO=your_crypto_key
+
 # Servicio de Traducción
 TRANSLATION_KEY=your_translation_key
 TRANSLATION_KEY_GLOBAL=your_translation_key_global
