--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@azure-rest/ai-document-intelligence": "1.0.0-alpha.20240209.1",
     "@azure/service-bus": "^7.9.5",
     "@azure/storage-blob": "^12.16.0",
+    "@azure/web-pubsub": "^1.2.0",
     "applicationinsights": "^2.7.3",
     "async": "^2.6.4",
     "axios": "^1.7.7",
