--- a/env.example
+++ b/env.example
@@ -31,3 +31,9 @@ SERVER_KEY=your_server_key
 # Servicio de Traducción
 TRANSLATION_KEY=your_translation_key
 TRANSLATION_KEY_GLOBAL=your_translation_key_global
+
+# Azure AI Studio Configuration
+AZURE_OPENAI_ENDPOINT=https://your-resource.openai.azure.com/
+AZURE_OPENAI_KEY=your-azure-openai-key
+AZURE_AI_ASSISTANT_ID=asst_your-assistant-id
+AZURE_VECTOR_STORE_ID=vs_your-vector-store-id
