--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.1",
     "nodemailer-express-handlebars": "^6.1.2",
+    "openai": "^4.104.0",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
