--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "express-rate-limit": "^7.5.0",
     "js-tiktoken": "^1.0.20",
     "mongoose": "^8.13.2",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.2",
     "nodemailer": "^6.10.1",
     "nodemailer-express-handlebars": "^6.1.2",
     "openai": "^4.104.0",
